--- a/AV/Sorting/mergesortAV.html
+++ b/AV/Sorting/mergesortAV.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <link rel="stylesheet" href="mergesortAV.css" type="text/css" />
 </head>
 
