--- a/Exercises/Sorting/MergesortMergePRO.html
+++ b/Exercises/Sorting/MergesortMergePRO.html
@@ -14,11 +14,8 @@ Written by Gayathri Subramanian and Cliff Shaffer
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <style>
-    #container {
-      border: 0;
-    }
-
     .jsavarray {
       position: absolute;
     }
@@ -51,7 +48,7 @@ var
 
 var rowHeight = 80;   // Space required for each row to be displayed
 var rowTop = 30;   // Position for top array
-var blockWidth = 47;  // Width of an array element
+var blockWidth = 32;  // Width of an array element
 
 // Variables used to keep track of the index and array of the
 // currently selected element within click handler
@@ -128,6 +125,7 @@ var initJSAV = function (a) {
   arr_size = a;
   empty = new Array(arr_size),
   jsav = new JSAV($("#container"));
+  jsav.recorded();
   left_size = Math.floor((arr_size + 1) / 2);
   arrdata = JSAV.utils.rand.numKeys(10, 100, arr_size);
   arrdata_left = arrdata.slice(0, left_size);
