--- a/Exercises/RecurTutor/recChapterSumm.html
+++ b/Exercises/RecurTutor/recChapterSumm.html
@@ -11,6 +11,15 @@
 <body  data-height="550" data-width="950">
   <div class="exercise" data-name="recSummMCQ1"></div>
   <div class="exercise" data-name="recSummMCQ2"></div>
+  <div class="exercise" data-name="recSummMCQ3"></div>
+  <div class="exercise" data-name="recSummMCQ4"></div>
+  <div class="exercise" data-name="recSummMCQ5"></div>
+  <div class="exercise" data-name="recSummTF1"></div>
+  <div class="exercise" data-name="recSummTF2"></div>
   <div class="exercise" data-name="recSummTF3"></div>
+  <div class="exercise" data-name="recSummTF4"></div>
+  <div class="exercise" data-name="recSummTF5"></div>
+  <div class="exercise" data-name="recSummTF6"></div>
+  <div class="exercise" data-name="recSummTF7"></div>
 </body>
 </html>
